# base64

./: .gitignore  CMakeLists.txt  README.md
include/base64/: base64.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
test/lib/: test_runner.hpp
test/src/: base64_tests.hpp
